# ChangeLog for dev-libs/389-adminutil
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  12 Mar 2010; A. Vinogradov <spamslepnoga@inbox.ru>
  +389-adminutil-1.1.9.ebuild:
  bump

*389-adminutil-1.1.9 ( 12 Mar 2010 )

  12 Nov 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  389-adminutil-1.1.8-r1.ebuild:
  add upstream test suite

  25 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  -389-adminutil-1.1.8.ebuild:
  drop old

  25 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  +files/1.1.8/0001-no_icu_pc.patch, 389-adminutil-1.1.8-r1.ebuild,
  -files/389-adminutil-1.1.8-no_icu_pc.patch:
  move patch to PV dir

  06 Oct 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  +389-adminutil-1.1.8-r1.ebuild:
  rewrite to EAPI 2

*389-adminutil-1.1.8 (20 Aug 2009)

  20 Aug 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  +389-adminutil-1.1.8.ebuild, +files/389-adminutil-1.1.8-no_icu_pc.patch,
  +metadata.xml:
  initial commit
