@@ -1,7 +1,9 @@
 AUX 1.1.8/0001-no_icu_pc.patch 962 RMD160 88c705be3519860e64ab88c0ccafa74aa6fcf4bf SHA1 8c3b9c8488146cd35c834a2781958e78d35ac63a SHA256 188236e9be627f464b317d7f647b623c4e7f60268cbc813451581536fabeaaf0
+DIST 389-adminutil-1.1.10.tar.bz2 307582 RMD160 5b42ac9bba3ad8fdfc49970e58d3dadec5e06683 SHA1 310be539a4cd31a892858cabf609c0d3acedad92 SHA256 d1cccc6439439716a48ec13b676122457de10c29556640eac0ed096302229428
 DIST 389-adminutil-1.1.8.tar.bz2 307299 RMD160 9ff2a965e27f6a8eee22fc4375f0c06c4f49fb5e SHA1 ff2090c74f63cce65f8222263207ee5442a9e325 SHA256 d0b6e7447035cecb0b37c38f58eea6a677642b5e07f3f9e6e342e35ddeffa2a4
 DIST 389-adminutil-1.1.9.tar.bz2 307492 RMD160 2aa70d6aa88cf8b5021bd2f439a163b5aa10dddb SHA1 516cd69f7a0b34f52563a4a5b8e4a6f9b0839177 SHA256 10ddb6c1e3c491e54df7f5fe46b2dd1b330a6b7b1d5d78a5ebf63843cb43a012
+EBUILD 389-adminutil-1.1.10.ebuild 920 RMD160 7a2e89d4afef73cf907359ed6f3a36567ae4e694 SHA1 1376eb715d3e19537fec2a7d373c4aba4557cdf3 SHA256 a4e477c1a7240963d50c1eeb8e68dafd42f02d534a8ee6d2c70499d76df464b9
 EBUILD 389-adminutil-1.1.8-r1.ebuild 888 RMD160 98d47999e75c7d2f8a1452a43fd496d729de73ef SHA1 24c5592cf99d6f85bc45dcf3c62316746544a5f3 SHA256 edd99a9152cc71e5c3571471ae2f891fa8a3a561ca32c6814f1b96cda2003eb0
 EBUILD 389-adminutil-1.1.9.ebuild 900 RMD160 b18390f17c423bc1b905acca9f0aade3ec47f2f9 SHA1 fecc6858a216c7f6951a797a588c3fd42a171fdc SHA256 46fa8eb31106ba4e17f4cb89a66c66f0466a4659ddada3c231b483d5990e8a40
-MISC ChangeLog 960 RMD160 0988ead650c4c2aedcef2ec47f3f748c240b9a1f SHA1 5cc8453e9a953332f721124dd1efc6d4aa93179a SHA256 58e671e444db5051144b8725b0a0e67fc41421300b60741a4498f56cd73b10e2
+MISC ChangeLog 1104 RMD160 90d23f680720326bee0ba6c4c225dfa80922196d SHA1 0f7f86c2f39338f931fec730b759768f1d83750f SHA256 1404b3317261bf1bea34bd5ca2bbb97e0ae3405a1b4ede83495100337df30e1d
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
